[tool.poetry]
name = "repl_python3_ImDaHgui"
version = "0.1.0"
description = ""
authors = ["LGgameLAB <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
PySimpleGUI = "^4.48.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
